Pull request 726: Fix: fix telemetry events and migration buttons for different langs
Merge in SCITER/adguard-mini from 
telemetry-fixes to master

Squashed commit of the following:

commit e53bf89a1870cea02cb22d24734551a2d9ba27aa
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu Jan 29 18:37:44 2026 +0300

    Consider issues

commit 58dfb48e7f780c0adabd87f27a962f6b2b5402a0
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu Jan 29 18:35:39 2026 +0300

    Fix: fix telemetry events and migration buttons for different langs

--- a/AdguardMini/sciter-ui/modules/common/components/Layout/Layout.module.pcss
+++ b/AdguardMini/sciter-ui/modules/common/components/Layout/Layout.module.pcss
@@ -19,6 +19,7 @@
         min-height: 632px;
         height: *;
         padding: 0;
+        position: relative;
     }
 
     &__settingsMenu {
