--- a/AdguardMini/sciter-ui/modules/settings/components/Migration/Migration.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/Migration/Migration.module.pcss
@@ -29,10 +29,12 @@
     }
 
     &_buttons {
+        position: absolute;
+        bottom: 40px;
         flow: horizontal;
         vertical-align: center;
-        padding: 22px 74px 0;
-        height: 78px;
+        padding: 0 74px;
+        height: 56px;
 
         > button {
             margin: 0 var(--m-l);
