--- a/AdguardMini/sciter-ui/modules/tray/components/App/App.pcss
+++ b/AdguardMini/sciter-ui/modules/tray/components/App/App.pcss
@@ -6,4 +6,6 @@
 html, body {
     border-radius: 8px;
     height: 582px;
+    overflow: hidden;
+    scroll: none;
 }
