--- a/AdguardMini/sciter-ui/modules/tray/components/Home/Home.module.pcss
+++ b/AdguardMini/sciter-ui/modules/tray/components/Home/Home.module.pcss
@@ -10,6 +10,8 @@
     background: var(--fills-backgrounds-page-background-default);
     box-shadow: var(--bs-big);
     box-sizing: content-box;
+    overflow: hidden;
+    scroll: none;
 
     &_header {
         flow: horizontal;
